GNOME Bugzilla – Bug 681479
Fix segfault when result list is empty
Last modified: 2012-08-09 10:45:39 UTC
See patch.
Created attachment 220731 [details] [review] Fix segfault when result list is empty Commit 50711e28b introduced selecting the first result automatically, but didn't handle the case where the result list is empty.
Review of attachment 220731 [details] [review]: Thanks, looks good!
*** Bug 681505 has been marked as a duplicate of this bug. ***
Attachment 220731 [details] pushed as 1d505a3 - Fix segfault when result list is empty