Fix segfault when result list is empty

Commit 50711e28b introduced selecting the first result automatically,
but didn't handle the case where the result list is empty.

https://bugzilla.gnome.org/show_bug.cgi?id=681479